--- a/stylesheets/css/footer.css
+++ b/stylesheets/css/footer.css
@@ -39,6 +39,7 @@ body { width: 100%; overflow-x: hidden; }
 .footer .footer-info .footer-sns .sns-tab .sns-tab__tooltip span { width: 100%; height: 2.35rem; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; font-size: 1.15rem; line-height: 2.35rem; font-weight: 800; letter-spacing: 0.1rem; z-index: 3; text-align: center; }
 .footer .footer-info .footer-rights { text-align: center; color: white; font-size: 1.15rem; font-family: 'NanumSquare', sans-serif; }
 
+@media screen and (min-width: 1920px) { html { font-size: 14px; } }
 @media screen and (min-width: 769px) and (max-width: 1024px) { .footer .footer-insta .insta-part .insta-tab p { bottom: 4rem; }
   .footer .footer-insta .insta-part .insta-tab p span { font-size: 1.1rem; padding: 1.1rem 2rem; border-radius: 5rem; }
   .footer .footer-insta .insta-part .insta-tab p span:hover { background-color: white; color: #2ac6ff; }
