--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -35,6 +35,7 @@ body { width: 100%; overflow-x: hidden; }
 .header .logo .logo-title { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .header .logo .logo-title img { width: 48%; height: 48%; margin-bottom: 20%; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 
+@media screen and (min-width: 1920px) { html { font-size: 14px; } }
 @media screen and (min-width: 1025px) and (max-width: 1280px) { .header .logo { width: 14vw; } }
 @media screen and (min-width: 769px) and (max-width: 1024px) { .header .logo { width: 18vw; height: 170px; left: 60px; } }
 @media screen and (max-width: 768px) { .header { height: 60px; }
