--- a/stylesheets/footer.scss
+++ b/stylesheets/footer.scss
@@ -220,6 +220,11 @@ body {
 		}
 	}
 }
+@media screen and (min-width: 1920px) {
+html {
+	font-size: $desktop-large;
+}
+}
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
 
 }
