--- a/stylesheets/header.scss
+++ b/stylesheets/header.scss
@@ -178,6 +178,11 @@ body {
 		}
 	}
 }
+@media screen and (min-width: 1920px) {
+html {
+	font-size: $desktop-large;
+}
+}
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
 	.header {
 		.logo {
