--- a/stylesheets/location.scss
+++ b/stylesheets/location.scss
@@ -411,6 +411,11 @@ body {
 		}
 	}
 }
+@media screen and (min-width: 1920px) {
+html {
+	font-size: $desktop-large;
+}
+}
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
 .container {
 	.container-title {
