--- a/stylesheets/rent.scss
+++ b/stylesheets/rent.scss
@@ -496,6 +496,11 @@ body {
 		display: none;
 	}
 }
+@media screen and (min-width: 1920px) {
+html {
+	font-size: $desktop-large;
+}
+}
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
 
 }
