--- a/stylesheets/class.scss
+++ b/stylesheets/class.scss
@@ -121,28 +121,34 @@ body {
 			@include flexbox();
 			@include justify-content(space-between);
 			.icon-tab {
-				width: 20%;
+				width: calc(100% / 3);
 				position: relative;
 				font-family: 'NanumSquare', sans-serif;
 				text-align: center;
 				@include flexbox();
 				@include flex-direction(column);
-				margin-left: 20%;
+				@include box-sizing(border-box);
+				padding: 0 7%;
+				&:hover {
+					.icon-tab__title {
+						&:before {
+							width: 70%;
+						}
+					}
+				}
 				&:nth-of-type(1) {
 					margin-left: 0;
 				}
 				.icon-tab__img {
 					width: 100%;
-					height: 13rem;
 					position: relative;
 					text-decoration: none;
 					@include flexbox();
 					@include justify-content(center);
+					display: inline;
 					.tab-img__icon {
 						width: 100%;
-						position: absolute;
-						bottom: 0;
-						left: 0;
+						position: relative;
 					}
 					.tab-img__icon-effect {
 						width: 100%;
@@ -157,9 +163,10 @@ body {
 				.icon-tab__subtitle {
 					width: 100%;
 					text-align: center;
-					margin-top: 3rem;
+					margin-top: 2rem;
 					color: $gray3;
 					font-size: 1rem;
+					line-height: 1.5;
 					word-break: keep-all;
 					display: block;
 				}
@@ -171,6 +178,21 @@ body {
 					margin-top: 1.15rem;
 					font-weight: 700;
 					display: block;
+					position: relative;
+					z-index: 3;
+					text-decoration: none;
+					&:before {
+						content: '';
+						width: 0;
+						height: 4px;
+						@include main-gradient();
+						display: inline-block;
+						position: absolute;
+						top: 100%;
+						left: 15%;
+						@include transform-origin(center center);
+						@include transition(all 0.5s ease);
+					}
 				}
 			}
 		}
@@ -824,7 +846,7 @@ html {
 	}
 }
 }
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
 .container {
 	.container-title {
 		.title-line {
@@ -837,20 +859,14 @@ html {
 			width: 100%;
 			padding: 0 16%;
 			.icon-tab {
-				width: calc(70% / 3);
-				margin-left: 15%;
+				width: calc(100% / 3);
 				.icon-tab__img {
 					width: 100%;
-					height: 13rem;
 					position: relative;
 					text-decoration: none;
 					@include flexbox();
 					@include justify-content(center);
-					.tab-img__icon {
-						width: 100%;
-						position: absolute;
-						bottom: 0;
-						left: 0;
+					.tab-img__icon {						
 					}
 					.tab-img__icon-effect {
 						width: 100%;
@@ -1040,7 +1056,7 @@ html {
 	}
 }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
 .jumbotron {
 	.jumbotron-img {
 		img {
@@ -1061,16 +1077,11 @@ html {
 		.icon-warpper {
 			padding: 0 10%;
 			.icon-tab {
-				width: calc(84% / 3);
-				margin-left: 8%;
+				width: calc(100% / 3);
+				padding: 3%;
 				.icon-tab__img {
-					width: 100%;
-					height: 6rem;
 				}
 				.icon-tab__subtitle {
-					margin-top: 2rem;
-					font-size: 1rem;
-					line-height: 1.2;
 					display: none;
 				}
 				.icon-tab__title {
@@ -1089,7 +1100,8 @@ html {
 		&:nth-of-type(2) {
 			padding-top: 0;
 			.class-info__review {
-				width: 100%;
+				width: 90%;
+				margin-left: 10%;
 				.mCustomScrollBox {
 					.mCSB_container {
 					}
@@ -1123,7 +1135,7 @@ html {
 		}
 		.class-info__review {
 			height: 35rem;
-			width: 100%;
+			width: 90%;
 			.mCustomScrollBox {
 				.mCSB_container {
 				}
@@ -1132,7 +1144,7 @@ html {
 			width: 310vw;
 			height: 35rem;
 				.review-card {
-					width: 18%;
+					width: 16%;
 					height: 30rem;
 					&.appear{
 					}
