--- a/stylesheets/css/class.css
+++ b/stylesheets/css/class.css
@@ -228,14 +228,16 @@ body { width: 100%; overflow-x: hidden; }
 .container .container-title .title { font-family: 'TmonMonsori'; font-size: 2.9rem; text-shadow: -1px -1px 0 #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b, 1px 1px 0 #2b2b2b; margin-top: 2rem; text-align: center; margin-bottom: 5rem; color: white; }
 .container .container-content { width: 100%; position: relative; }
 .container .container-content .icon-warpper { width: 100%; padding: 0 25%; position: relative; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; }
-.container .container-content .icon-warpper .icon-tab { width: 20%; position: relative; font-family: 'NanumSquare', sans-serif; text-align: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; margin-left: 20%; }
+.container .container-content .icon-warpper .icon-tab { width: calc(100% / 3); position: relative; font-family: 'NanumSquare', sans-serif; text-align: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 7%; }
+.container .container-content .icon-warpper .icon-tab:hover .icon-tab__title:before { width: 70%; }
 .container .container-content .icon-warpper .icon-tab:nth-of-type(1) { margin-left: 0; }
-.container .container-content .icon-warpper .icon-tab .icon-tab__img { width: 100%; height: 13rem; position: relative; text-decoration: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
-.container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon { width: 100%; position: absolute; bottom: 0; left: 0; }
+.container .container-content .icon-warpper .icon-tab .icon-tab__img { width: 100%; position: relative; text-decoration: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; display: inline; }
+.container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon { width: 100%; position: relative; }
 .container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon-effect { width: 100%; position: absolute; top: 0; left: 0; }
 .container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon-effect.effect { -webkit-animation: icon-effect 0.5s ease infinite; animation: icon-effect 0.5s ease infinite; }
-.container .container-content .icon-warpper .icon-tab .icon-tab__subtitle { width: 100%; text-align: center; margin-top: 3rem; color: #a5a5a5; font-size: 1rem; word-break: keep-all; display: block; }
-.container .container-content .icon-warpper .icon-tab .icon-tab__title { width: 100%; text-align: center; color: #606060; font-size: 2rem; margin-top: 1.15rem; font-weight: 700; display: block; }
+.container .container-content .icon-warpper .icon-tab .icon-tab__subtitle { width: 100%; text-align: center; margin-top: 2rem; color: #a5a5a5; font-size: 1rem; line-height: 1.5; word-break: keep-all; display: block; }
+.container .container-content .icon-warpper .icon-tab .icon-tab__title { width: 100%; text-align: center; color: #606060; font-size: 2rem; margin-top: 1.15rem; font-weight: 700; display: block; position: relative; z-index: 3; text-decoration: none; }
+.container .container-content .icon-warpper .icon-tab .icon-tab__title:before { content: ''; width: 0; height: 4px; background: #fffaa7; background: -moz-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: -webkit-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); display: inline-block; position: absolute; top: 100%; left: 15%; -webkit-transform-origin: center center; -ms-transform-origin: center center; transform-origin: center center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 
 .container-wave { width: 100%; opacity: 0.5; position: relative; overflow: hidden; }
 .container-wave img { width: 100%; }
@@ -315,10 +317,9 @@ body { width: 100%; overflow-x: hidden; }
 @media screen and (min-width: 1025px) and (max-width: 1280px) { .container-class .class-info .class-info__review .info-review-card-list .review-card .card-cont .cont-eval { margin-top: 155%; }
   .container-cost .cost-wrapper .cost-tab { width: 25%; padding: 3%; }
   .container-cost .cost-wrapper .cost-tab .cost-tab__option .option .option-input { width: 2.5em; } }
-@media screen and (min-width: 769px) and (max-width: 1024px) { .container .container-content .icon-warpper { width: 100%; padding: 0 16%; }
-  .container .container-content .icon-warpper .icon-tab { width: calc(70% / 3); margin-left: 15%; }
-  .container .container-content .icon-warpper .icon-tab .icon-tab__img { width: 100%; height: 13rem; position: relative; text-decoration: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
-  .container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon { width: 100%; position: absolute; bottom: 0; left: 0; }
+@media screen and (min-width: 768px) and (max-width: 1024px) { .container .container-content .icon-warpper { width: 100%; padding: 0 16%; }
+  .container .container-content .icon-warpper .icon-tab { width: calc(100% / 3); }
+  .container .container-content .icon-warpper .icon-tab .icon-tab__img { width: 100%; position: relative; text-decoration: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
   .container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon-effect { width: 100%; position: absolute; top: 0; left: 0; }
   .container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon-effect.effect { -webkit-animation: icon-effect 0.5s ease infinite; animation: icon-effect 0.5s ease infinite; }
   .container .container-content .icon-warpper .icon-tab .icon-tab__subtitle { width: 100%; text-align: center; margin-top: 3rem; color: #a5a5a5; font-size: 1rem; word-break: keep-all; display: block; }
@@ -335,21 +336,20 @@ body { width: 100%; overflow-x: hidden; }
   .container-cost .cost-wrapper .cost-tab:nth-of-type(1) { margin-left: 0; }
   .container-cost .cost-wrapper .cost-tab .cost-tab__option .option .option-input { width: 2.5em; }
   .container-cost .cost-final { width: 55%; margin-left: 45%; } }
-@media screen and (max-width: 768px) { .jumbotron .jumbotron-img img { width: auto; height: 100%; }
+@media screen and (max-width: 767px) { .jumbotron .jumbotron-img img { width: auto; height: 100%; }
   .container .container-title .title { font-size: 2rem; }
   .container .container-content .icon-warpper { padding: 0 10%; }
-  .container .container-content .icon-warpper .icon-tab { width: calc(84% / 3); margin-left: 8%; }
-  .container .container-content .icon-warpper .icon-tab .icon-tab__img { width: 100%; height: 6rem; }
-  .container .container-content .icon-warpper .icon-tab .icon-tab__subtitle { margin-top: 2rem; font-size: 1rem; line-height: 1.2; display: none; }
+  .container .container-content .icon-warpper .icon-tab { width: calc(100% / 3); padding: 3%; }
+  .container .container-content .icon-warpper .icon-tab .icon-tab__subtitle { display: none; }
   .container .container-content .icon-warpper .icon-tab .icon-tab__title { font-size: 1.5rem; margin-top: 1.5rem; }
   .container-class .class-info { -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
   .container-class .class-info:nth-of-type(2) { padding-top: 0; }
-  .container-class .class-info:nth-of-type(2) .class-info__review { width: 100%; }
+  .container-class .class-info:nth-of-type(2) .class-info__review { width: 90%; margin-left: 10%; }
   .container-class .class-info:nth-of-type(2) .class-info__cont { position: absolute; top: 100%; margin-right: 0; margin-left: 0; }
   .container-class .class-info:nth-of-type(3) { margin-top: 100%; }
-  .container-class .class-info .class-info__review { height: 35rem; width: 100%; }
+  .container-class .class-info .class-info__review { height: 35rem; width: 90%; }
   .container-class .class-info .class-info__review .info-review-card-list { width: 310vw; height: 35rem; }
-  .container-class .class-info .class-info__review .info-review-card-list .review-card { width: 18%; height: 30rem; }
+  .container-class .class-info .class-info__review .info-review-card-list .review-card { width: 16%; height: 30rem; }
   .container-class .class-info .class-info__review .info-review-card-list .review-card .card-cont .cont-eval { margin-top: 121%; }
   .container-class .class-info .class-info__review .info-review-card-list .review-card .card-cont .cont-eval img { height: 1.6rem; margin-right: 0.7rem; }
   .container-class .class-info .class-info__review .info-review-card-list .review-card .card-cont .cont-comment { margin-top: 1.5rem; }
